_sass/post.scss
@import 'style';


table {
	tr {
		border-top: 1px solid black;
		border-bottom: 1px solid black;
		td {
			text-align: center;
		}
	}
}

ul {
	li {
		list-style-type: disc !important;
	}
	padding-left: 40px !important;
}

.references p {
	text-indent: -18px;
	padding-left: 18px;
	font-size: 0.9rem !important;
}

.appendix, .acknowledgements {
	font-size: 0.9rem !important;
}

blockquote {
	border-left: 0;
}

img {
	margin-left: auto;
	margin-right: auto;
}

